--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "sharp": "^0.33.1",
     "tailwind-merge": "^2.2.0",
     "three": "^0.169.0",
-    "use-gesture": "^1.0.0"
+    "use-gesture": "^1.0.0",
+    "web-vitals": "^5.1.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
