build: add docker artifacts and phase 2 roadmap

--- a/package.json
+++ b/package.json
@@ -4,20 +4,29 @@
   "private": true,
   "description": "AIDYN Technologies - Landing Page Marketing Professionnelle",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --hostname 0.0.0.0 --port 3000",
+    "dev:turbo": "next dev --turbo --hostname 0.0.0.0 --port 3000",
     "build": "next build",
-    "start": "next start",
+    "start": "next start --hostname 0.0.0.0 --port 3000",
+    "preview": "node scripts/preview.mjs",
     "lint": "next lint",
+    "verify": "npm run lint && cross-env CI=1 npm run build",
     "type-check": "tsc --noEmit",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,css,md}\"",
     "clean": "rm -rf .next dist node_modules/.cache",
     "docker:build": "docker build -t aidyn-landing .",
     "docker:run": "docker run -p 3000:3000 aidyn-landing",
-    "docker:dev": "docker-compose up --build"
+    "docker:dev": "docker compose -f compose.prod.yml up --build -d",
+    "docker:down": "docker compose -f compose.prod.yml down",
+    "images:import": "node scripts/import-images.mjs",
+    "images:opt": "node scripts/optimize-images.mjs",
+    "images:check": "node scripts/check-usage.mjs",
+    "images:all": "npm run images:import && npm run images:opt && npm run images:check"
   },
   "dependencies": {
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.294.0",
@@ -38,6 +47,7 @@
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.16",
+    "cross-env": "^7.0.3",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.4",
     "postcss": "^8.4.32",
